Fix condition table display in dark mode. Fix info control alignment.

--- a/less/v2/dark/apps.less
+++ b/less/v2/dark/apps.less
@@ -112,8 +112,9 @@
   }
 }
 
-:is(.dnd5e-theme-dark, .theme-dark) .effects-element {
-  .conditions-list .condition {
+:is(.dnd5e-theme-dark, .theme-dark) .dnd5e2.sheet.actor.character .effects-element {
+  .conditions-list .condition.content-link {
+    background: unset;
     border-color: var(--dnd5e-color-blue-gray-3);
     &:hover { background: var(--dnd5e-color-blue-gray-3); }
   }
