--- a/less/v2/inventory.less
+++ b/less/v2/inventory.less
@@ -460,6 +460,7 @@
         padding-right: .75rem;
         justify-content: end;
         color: var(--color-text-light-0);
+        align-items: center;
       }
 
       @container (min-width: 600px) {
